fix: review fixes

--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -117,7 +117,7 @@
   font-size: 16px;
   line-height: 30px;
   mix-blend-mode: normal;
-  opacity: 0.5;
+  color: rgba(#ffffff, 0.5);
 }
 
 .landing__right-column {
