--- a/src/components/Landing/sections/BuyAndBurn/BuyAndBurn.scss
+++ b/src/components/Landing/sections/BuyAndBurn/BuyAndBurn.scss
@@ -1,5 +1,4 @@
-.bold-text {
-  font-family: Montserrat;
+.buy-and-burn__bold-text {
   font-weight: 600;
   font-size: 24px;
   line-height: 22px;
@@ -7,7 +6,7 @@
 }
 
 .buy-and-burn__progress-bar-content {
-  margin-bottom: 25px;
+  padding: 30px 0 65px;
 }
 
 .buy-and-burn__progress-bar-title {
@@ -18,42 +17,48 @@
   margin-bottom: 7px;
 }
 
-.buy-and-burn__title-right,
-.buy-and-burn__title-left {
-  font-family: Montserrat;
+.buy-and-burn__title {
   font-weight: 500;
   font-size: 14px;
-  line-height: 30px;
+  line-height: 16px;
   color: #ffffff;
 }
 
-.buy-and-burn__title-right {
-  float: right;
+.buy-and-burn__progress-bar-title-up {
+  display: flex;
+  flex-direction: column;
+
+  &--right {
+    align-items: flex-end;
+  }
 }
 
 .buy-and-burn__amount-right,
 .buy-and-burn__amount-left {
-  font-family: Montserrat;
   font-weight: 600;
   font-size: 24px;
   line-height: 32px;
   color: #ffffff;
 }
 
-.progress-bar {
+.buy-and-burn__progress-bar {
   position: relative;
   width: 520px;
   height: 20px;
   background-color: #2f3864;
 }
 
-.current-progress {
+.buy-and-burn__current-progress {
   position: absolute;
   background-color: #ffffff;
   height: 20px;
   width: 0%;
 }
 
-.section-margin {
-  margin-bottom: 25px;
+.buy-and-burn__section-margin {
+  margin-bottom: 30px !important;
+}
+
+.buy-and-burn__content {
+  line-height: 20px !important;
 }
