--- a/src/components/Landing/sections/FeeDiscounts/FeeDiscounts.scss
+++ b/src/components/Landing/sections/FeeDiscounts/FeeDiscounts.scss
@@ -1,45 +1,48 @@
+.fee-discounts__content {
+  padding-bottom: 60px;
+}
+
 .fee-discounts__calculator-content {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 35px 20px;
+  margin-bottom: 27px;
   mix-blend-mode: normal;
-  border: 1px solid #ffffff;
+  border: 1px solid rgba(#ffffff, 0.2);
   box-sizing: border-box;
-  padding: 35px;
 }
 
 .fee-discounts__calculator {
   display: flex;
-  flex-direction: row;
+  align-items: center;
   margin-bottom: 25px;
 }
 
 .fee-discounts__input {
-  font-family: Montserrat;
+  width: 200px;
   font-weight: 600;
   font-size: 24px;
   line-height: 32px;
   border: none;
   border-bottom: 1px solid #4d5475;
+  color: #ffffff;
+  background-color: transparent;
   transition: 0.2s;
-  color: #fff;
-  width: 200px;
-  background: transparent;
 }
 
 .fee-discounts__input:focus {
   outline: none;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #ffffff;
   transition: 0.2s;
 }
 
 .fee-discounts__label,
 .fee-discounts__receive-label-bottom {
-  font-family: Montserrat;
+  margin-bottom: 20px;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
-  margin-bottom: 20px;
   text-transform: uppercase;
 }
 
@@ -94,7 +97,8 @@
 }
 
 .fee-discounts__arrows {
-  margin: 40px 20px 0 20px;
+  align-self: flex-end;
+  margin: 0 35px 6px;
 }
 
 .trading {
@@ -109,11 +113,6 @@
   text-shadow: #dce2ff;
 }
 
-.buy-and-burn__progress-bar-title-up {
-  display: flex;
-  flex-direction: column;
-}
-
 .fee-discounts__receive-usd {
   width: 200px;
   height: 35px;
@@ -122,14 +121,18 @@
   line-height: 32px;
   border: none;
   border-bottom: 1px solid #4d5475;
-  transition: 0.2s;
-  color: #fff;
+  color: #ffffff;
   background: transparent;
+  transition: all 0.2s;
 }
 
 .fee-discount__receive-text {
   padding: 0;
-  margin: 0;
   width: 128px;
+  margin: 0;
   overflow: hidden;
+}
+
+.fee-discount__section-margin {
+  margin-bottom: 30px !important;
 }
